[gd_scene load_steps=2 format=2]

[ext_resource path="res://SpawnEnemy.gd" type="Script" id=1]

[node name="SpawnEnemy" type="Node"]

script = ExtResource( 1 )

[node name="container" type="Node" parent="." index="0"]

[node name="Timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.8
one_shot = false
autostart = true

[node name="TripleTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = true

[node name="EnemyTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="TripleTimer" to="." method="_on_TripleTimer_timeout"]

[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]


